"equals method optimized"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="zero">0</string>
     <string name="coma">,</string>
     <string name="result">0</string>
+    <string name="mulcalculator">*</string>
 </resources>
